<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp16"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivBlood"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp20"
                    android:contentDescription="@string/blood"
                    android:src="@drawable/ic_car_repair" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputMobileNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    android:hint="@string/mobile"
                    android:textColor="@color/textColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="@dimen/sp16" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    android:hint="@string/password"
                    android:textColor="@color/textColor"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrim">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputConfirmPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    android:hint="@string/cnf_password"
                    android:textColor="@color/textColor"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrim">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/bRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp20"
                    android:padding="@dimen/dp10"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp14" />

                <TextView
                    android:id="@+id/tvLoginUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_marginEnd="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp15"
                    android:gravity="center"
                    android:text="@string/already_register"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp16" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>